# enki-simulations

./: .gitignore  CMakeLists.txt  Makefile  README.md  dockerfile
CMakeModules/: Findenki.cmake  enki.cmake
projects/: CMakeLists.txt
projects/enki_clustering_ga/: CMakeLists.txt  EPuckController.hpp  main.cpp  run.sh  viewScene.hpp  worldTrain.hpp
projects/enki_grouping/: CMakeLists.txt  main.cpp
projects/enki_grouping_ga/: CMakeLists.txt  EPuckController.hpp  main.cpp  run.sh  tests.md  viewScene.hpp  worldTrain.hpp
projects/enki_grouping_mult_color/: CMakeLists.txt  main.cpp
projects/enki_grouping_mult_color_ga/: CMakeLists.txt  EPuckController.hpp  main.cpp  run.sh  viewScene.hpp  worldTrain.hpp
projects_backup/: CMakeLists.txt
projects_backup/enki_grouping/: CMakeLists.txt
scripts/: compile.sh  run.sh  setup.sh  update_enki.sh
